RESOLVED FIXED233166
[WebGPU] Vertex and fragment shaders are not hooked up to pipeline creation
https://bugs.webkit.org/show_bug.cgi?id=233166
Summary [WebGPU] Vertex and fragment shaders are not hooked up to pipeline creation
Myles C. Maxfield
Reported 2021-11-15 19:50:29 PST
[WebGPU] Vertex and fragment shaders are not hooked up to pipeline creation
Attachments
Patch (6.80 KB, patch)
2021-11-15 19:52 PST, Myles C. Maxfield
no flags
Patch (7.32 KB, patch)
2021-11-15 20:01 PST, Myles C. Maxfield
no flags
Patch (9.32 KB, patch)
2021-11-15 20:57 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2021-11-15 19:52:17 PST
Myles C. Maxfield
Comment 2 2021-11-15 20:01:18 PST
Myles C. Maxfield
Comment 3 2021-11-15 20:57:52 PST
EWS
Comment 4 2021-11-16 09:11:29 PST
Committed r285868 (244294@main): <https://commits.webkit.org/244294@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444340 [details].
Radar WebKit Bug Importer
Comment 5 2021-11-16 09:13:15 PST
Note You need to log in before you can comment on or make changes to this bug.