[WebGPU] Vertex and fragment shaders are not hooked up to pipeline creation https://bugs.webkit.org/show_bug.cgi?id=233166

Reviewed by Dean Jackson.

I simply forgot to implement them in r285831.

* pal/graphics/WebGPU/Impl/WebGPUAdapterImpl.cpp:
(PAL::WebGPU::supportedLimits):
* pal/graphics/WebGPU/Impl/WebGPUDeviceImpl.cpp:
(PAL::WebGPU::convertToBacking):



Canonical link: https://commits.webkit.org/244294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285868 268f45cc-cd09-0410-ab3c-d52691b4dbfc